--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <section id="projects">
             <h2>Projects</h2>
             <ul>
-                <li><a href="file:///Users/miahalabi/Desktop/resume-website/project1.html">Project 1</a></li>
+                <li><a href="project1.html">Project 1</a></li>
                 <li><a href="file:///Users/miahalabi/Desktop/resume-website/project2.html">Project 2</a></li>
             </ul>
             </section>
