--- a/project2.html
+++ b/project2.html
@@ -14,8 +14,8 @@
     <main>
 <section>
     <h2>Project Overview</h2>
-    <img src="HumanTraffic1.png" alt="HumanTraffic1.png" width="600">
-    <img src="HumanTraffic2.png" alt="HumanTraffic2.png" width="600">
+    <img src="HumanTraffic1.png" width="600">
+    <img src="HumanTraffic2.png" width="600">
 
     <p>This project was a colaberative effort 
         between myself and my classmate. The overall goal of this project was to analyze a data set 
