--- a/project2.html
+++ b/project2.html
@@ -15,7 +15,7 @@
 <section>
     <h2>Project Overview</h2>
     <img src="HumanTraffic1.png" width="600">
-    <img src="HumanTraffic2.png" width="600">
+    <img src="HumanTraffic2.png" alt="Project 2 Image" width="600">
 
     <p>This project was a colaberative effort 
         between myself and my classmate. The overall goal of this project was to analyze a data set 
